# SwitchPost

./: .gitignore  CMakeLists.txt  README.md  RESOURCE_PACK_README.md
assets/text/: credits.txt  test_data.json
assets/tutorial/female/: data.json
assets/tutorial/male/: data.json
example-pack/: pack.spmeta
example-pack/tutorial/moj-glos/: data.json
source/: AssetLoader.cpp  AssetLoader.h  Config.cpp  Config.h  Helpers.cpp  Helpers.h  InpostAPI.cpp  InpostAPI.h  MusicManager.cpp  MusicManager.h  Request.cpp  Request.h  Scene.h  SceneCredits.cpp  SceneCredits.h  SceneDebug.cpp  SceneDebug.h  SceneIntro.cpp  SceneIntro.h  SceneMain.cpp  SceneMain.h  SceneManager.cpp  SceneManager.h  SceneOptions.cpp  SceneOptions.h  SceneReloadMain.cpp  SceneReloadMain.h  SceneTitle.cpp  SceneTitle.h  SceneTutorial.cpp  SceneTutorial.h  main.cpp
